--- a/eyeq++/Makefile
+++ b/eyeq++/Makefile
@@ -1,7 +1,7 @@
 
 obj-m += sch_eyeq.o
 
-sch_eyeq-y := rx.o params.o rcp.o rate_est.o
+sch_eyeq-y := qdisc.o rx.o params.o rcp.o rate_est.o
 
 all:
 	make -C /lib/modules/$(shell uname -r)/build M=`pwd`
