make -j9 to speed up compilation

--- a/eyeq++/Makefile
+++ b/eyeq++/Makefile
@@ -4,7 +4,7 @@ obj-m += sch_eyeq.o
 sch_eyeq-y := qdisc.o rx.o params.o rcp.o rate_est.o
 
 all:
-	make -C /lib/modules/$(shell uname -r)/build M=`pwd`
+	make -j9 -C /lib/modules/$(shell uname -r)/build M=`pwd`
 
 .PHONY: .clean
 clean:
